--- a/angular.json
+++ b/angular.json
@@ -10,6 +10,9 @@
           "style": "scss"
         }
       },
+      "i18n": {
+        "sourceLocale": "ru-KZ",
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
