--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "gh-pages": "ng build --output-path=gh-pages --base-href=/teamarket-angular/"
   },
   "private": true,
   "dependencies": {
