--- a/angular.json
+++ b/angular.json
@@ -11,7 +11,7 @@
         }
       },
       "i18n": {
-        "sourceLocale": "ru-KZ",
+        "sourceLocale": "ru-KZ"
       },
       "root": "",
       "sourceRoot": "src",
@@ -33,10 +33,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
+              "src/styles.scss"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/jquery/dist/jquery.min.js"
             ]
           },
           "configurations": {
